@@ -1,3 +1,8 @@
+Sun Sep  7 16:14:40 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-garrem.adb: If the remote host is the same as localhost, then
+	  do not use rsh but just use system() instead.
+
 Fri Sep  5 19:03:51 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-garnam.adb: (Is_Ip_Address): fixed bug reported by
